--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -19,7 +19,7 @@ header {
         justify-content: center;
         align-items: flex-end;
 
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     .headerBackground::after {
@@ -49,30 +49,14 @@ header {
             border-right: calc(100vw - 200px) solid variables.$body-color;
         }
     }
-
-    img {
-        // aspect-ratio: 16/ 9;
-        min-width: 100%;
-        transform: translate(0, 20%);
-        // height: 100%;
-    }
-
-    .imgFilter {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        background-color: variables.$accent-color;
-        // background-color: red;
-        opacity: 0.9;
-    }
 }
 
 .titleWrapper {
     transform: translateY(-15%);
-    width: 100%;
+    text-align: center;
+
     h1 {
         margin-top: -50px;
-        text-align: center;
         font-size: 3rem;
         color: rgba($color: #fff, $alpha: 0.92);
         @media screen and (max-width: 450px) {
@@ -81,8 +65,6 @@ header {
     }
 
     .hello {
-        text-align: center;
-        display: block;
         font-size: 10rem;
         font-family: 'pacifico';
 
@@ -98,8 +80,9 @@ header {
 
     h2 {
         font-size: 2rem;
+
         color: variables.$alpha-color-rev;
-        // opacity: 0.6;
+
         @media screen and (max-width: 450px) {
             font-size: 1.5rem;
         }
